[package]
name = "tokio-tcp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"


[dependencies]
tokio = {version="1", features=["full"]}
prost = "0.9"

[build-dependencies]
prost-build = "0"